fixing the spacing between sections

--- a/PlayerManagement/wwwroot/css/site.css
+++ b/PlayerManagement/wwwroot/css/site.css
@@ -59,6 +59,12 @@ hr.hr-gradient {
     background-image: linear-gradient(144deg, #00FF00, #00FFFF 50%, #FF00FF);
 }
 
+/*spacing sections*/
+.stats-title-section,
+.table-standings {
+    margin-top: 25px;
+}
+
 /* Game schedules
 -------------------------------------------------- */
 matchweek-schedule {
